# sketch

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
public/: index.html  script.js  styles.css
public/assets/: index-B4C1Qq51.js  index-BOyYHfCk.css  index-C2XjiknB.js  index-C4ixhkl_.js  index-C78ev5j-.css  index-CDrQmoBW.js  index-Cyv6iqDs.js  index-DCbIwB0a.js  index-DrRotwyE.js  index-XO1Wy01N.js
src/: main.rs  room.rs  state.rs  utils.rs
