[package]
name = "sketch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features=["ws"]}
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0", features=["full"]}
tower-http = {version= "0.6.8", features=["fs"]}
uuid = { version = "1.22.0", features = ["v4", "serde"] }
